Fixed whitespace only task strings were not displayed on their own rows

--- a/public_html/components/todolist/style.css
+++ b/public_html/components/todolist/style.css
@@ -125,7 +125,12 @@
 }
 
 .todolist-task {
+    width: 100%;
+    min-height: 18px;
     margin-bottom: 6px;
+}
+
+.todolist-task-text {
     width: 80%;
 }
 
